--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,6 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+*.swp
+#>fips
+# this area is managed by fips, do not edit
+.fips-*
+*.pyc
+#<fips
