--- a/yakc/CMakeLists.txt
+++ b/yakc/CMakeLists.txt
@@ -1,4 +1,4 @@
 fips_begin_module(yakc_core)
     fips_vs_warning_level(3)
-    fips_files(memory.h cpu.h _dummy.cc)
+    fips_files(memory.h z80.h _dummy.cc)
 fips_end_module()
