--- a/yakc/CMakeLists.txt
+++ b/yakc/CMakeLists.txt
@@ -1,5 +1,5 @@
 fips_begin_module(yakc_core)
     fips_vs_warning_level(3)
-    fips_files(memory.h z80.h _dummy.cc)
+    fips_files(memory.h z80.h common.h _dummy.cc)
     fips_generate(FROM opcodes.py HEADER opcodes.h)
 fips_end_module()
