--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then python fips make test; fi
 
   # OSX
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then python fips set config osx-xocde-unittest; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then python fips set config osx-xcode-unittest; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then python fips clean all; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then python fips make ALL_BUILD; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then python fips make RUN_TESTS; fi
