--- a/yakc_test/CMakeLists.txt
+++ b/yakc_test/CMakeLists.txt
@@ -1,4 +1,4 @@
-fips_begin_unittest(core)
+fips_begin_unittest(yakc_test)
     fips_vs_warning_level(3)
     fips_files(memory_test.cc z80_test.cc)
     fips_deps(yakc_core)
