integrated @ocornut's imgui memory editor

--- a/yakc_app/CMakeLists.txt
+++ b/yakc_app/CMakeLists.txt
@@ -8,6 +8,7 @@ fips_begin_app(yakc_app windowed)
         ui_cpu_window.h ui_cpu_window.cc
         ui_mem_window.h ui_mem_window.cc
         draw.h draw.cc
+        imgui_memoryeditor.h
     )
     oryol_shader(shaders.shd)
     fips_deps(Gfx Input IMUI yakc_core)
