--- a/yakc_ui/CMakeLists.txt
+++ b/yakc_ui/CMakeLists.txt
@@ -8,7 +8,7 @@ fips_begin_module(yakc_ui)
         WindowBase.cc WindowBase.h
         ImGuiMemoryEditor.h
         Disasm.cc Disasm.h
-        DisasmWindow.cc DisasmWindow.h
+        DebugWindow.cc DebugWindow.h
         z80dasm.cc z80dasm.h
     )
     fips_deps(yakc_core)
