--- a/yakc_core/CMakeLists.txt
+++ b/yakc_core/CMakeLists.txt
@@ -1,6 +1,6 @@
 fips_begin_module(yakc_core)
     fips_vs_warning_level(3)
-    fips_files(kc85.h memory.h z80.h z80pio.h common.h _dummy.cc)
+    fips_files(kc85.h memory.h z80.h z80pio.h z80ctc.h common.h _dummy.cc)
     fips_generate(FROM opcodes.py HEADER opcodes.h)
     fips_generate(FROM roms.py)
 fips_end_module()
