Moved embedded roms into their own directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ endif()
 fips_setup()
 fips_project(yakc)
 fips_include_directories(.)
+fips_add_subdirectory(yakc_roms)
 fips_add_subdirectory(yakc_core)
 fips_add_subdirectory(yakc_test)
 if (YAKC_UI)
