More daisy chain stuff

--- a/yakc_test/CMakeLists.txt
+++ b/yakc_test/CMakeLists.txt
@@ -1,6 +1,6 @@
 fips_begin_unittest(yakc_test)
     fips_vs_warning_level(3)
-    fips_files(memory_test.cc z80_test.cc)
+    fips_files(memory_test.cc z80_test.cc daisychain_test.cc)
     fips_deps(yakc_core)
 fips_end_unittest()
 
