KCC loading and key repeat

--- a/yakc_app/CMakeLists.txt
+++ b/yakc_app/CMakeLists.txt
@@ -16,5 +16,5 @@ fips_begin_app(${appname} windowed)
     if (YAKC_UI)
         fips_deps(yakc_ui)
     endif()
-    fips_deps(Gfx Input IMUI yakc_core)
+    fips_deps(Gfx HTTP Input IMUI yakc_core)
 fips_end_app()
