Started with audio

--- a/yakc_app/CMakeLists.txt
+++ b/yakc_app/CMakeLists.txt
@@ -10,11 +10,12 @@ fips_begin_app(${appname} windowed)
         Main.cc
         Util.h
         Draw.h Draw.cc
+        Audio.h Audio.cc
         KC85Oryol.h
     )
     oryol_shader(shaders.shd)
     if (YAKC_UI)
         fips_deps(yakc_ui)
     endif()
-    fips_deps(Gfx HTTP Input IMUI yakc_core)
+    fips_deps(Gfx HTTP Input IMUI Sound yakc_core)
 fips_end_app()
