--- a/web/_config.yml
+++ b/web/_config.yml
@@ -5,8 +5,7 @@ subtitle: Yet Another KC85 Emulator
 email: floooh@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     portable KC85 emulator written in C++
-# baseurl: "/virtualkc" # the subpath of your site, e.g. /blog/
-# url: "http://floooh.github.com" # the base hostname & protocol for your site
+baseurl: "/virtualkc" # the subpath of your site, e.g. /blog/
 twitter_username: flohofwoe
 github_username:  floooh
 
