General code cleanup

--- a/yakc_app/CMakeLists.txt
+++ b/yakc_app/CMakeLists.txt
@@ -17,5 +17,5 @@ fips_begin_app(${appname} windowed)
     if (YAKC_UI)
         fips_deps(yakc_ui)
     endif()
-    fips_deps(Gfx HTTP Input IMUI Synth Assets yakc_core)
+    fips_deps(Gfx HTTP Input IMUI Synth Assets yakc_core yakc_roms)
 fips_end_app()
