Reboot to different KC85/3 and KC85/4 configs

--- a/yakc_roms/roms.yml
+++ b/yakc_roms/roms.yml
@@ -4,6 +4,8 @@ files:
     - 'caos31.853'
     - 'caos41e.854'
     - 'caos41c.854'
+    - 'caos42e.854'
+    - 'caos42c.854'
     - 'forth.853'
     - 'develop.853'
 
