--- a/.travis.yml
+++ b/.travis.yml
@@ -25,13 +25,13 @@ script:
   - echo $TRAVIS_OS_NAME
 
   # LINUX
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then python fips set config linux-make-unittest; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then python fips set config yakc-linux-make-unittest; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then python fips clean all; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then python fips make Test; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then python fips run Test; fi
 
   # OSX
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then python fips set config osx-xcode-unittest; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then python fips set config yakc-osx-make-unittest; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then python fips clean all; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then python fips make Test; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then python fips run Test; fi
