Added a git --version to .travis.yml to find out why Linux builds are suddenly broken

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ install:
 
 script:
   - echo $TRAVIS_OS_NAME
+  - git --version
 
   # LINUX
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then python fips set config yakc-linux-make-unittest; fi
