--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -3,7 +3,8 @@ fips_begin_module(core)
     fips_files(
         memory.h clock.h common.h _dummy.cc
         z80int.h z80.h z80pio.h z80ctc.h z80dbg.h
-        kc85.h kc85_video.h kc85_audio.h kc85_exp.h
+        kc85.h kc85_video.h kc85_audio.h kc85_exp.h kc85_roms.h
+        kc85_snapshot.h
     )
     fips_generate(FROM opcodes.py HEADER opcodes.h)
 fips_end_module()
