Fixes for Remotery-Profiling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,9 @@ fips_import_oryol_flextgl()
 fips_import_oryol_ConvertUTF()
 fips_import_fips_imgui_imgui()
 fips_import_fips_unittestpp_unittestpp()
+if (FIPS_PROFILING)
+    fips_import_fips_remotery_Remotery()
+endif()
 fips_ide_group("")
 
 fips_include_directories(src)
