--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,10 @@ fips_import_oryol_Time()
 fips_import_oryol_Synth()
 fips_ide_group("Libs")
 fips_import_fips_zlib_zlib()
-fips_import_fips_glfw_glfw3()
-fips_import_oryol_flextgl()
+if (ORYOL_OPENGL AND NOT FIPS_RASPBERRYPI)
+    fips_import_fips_glfw_glfw3()
+    fips_import_oryol_flextgl()
+endif()
 fips_import_oryol_ConvertUTF()
 fips_import_fips_imgui_imgui()
 fips_import_fips_unittestpp_unittestpp()
