Started to implement audio through SoLoud

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ if (YAKC_UI)
     add_definitions("-DYAKC_UI=1")
 endif()
 
+set(SOLOUD_LIBMODPLUG OFF CACHE BOOL "Do not use libmodplug")
+
 fips_setup()
 fips_project(yakc)
 
@@ -31,13 +33,13 @@ fips_import_oryol_IMUI()
 fips_import_oryol_Resource()
 fips_import_oryol_Assets()
 fips_import_oryol_Time()
-fips_import_oryol_Synth()
 fips_ide_group("Libs")
 fips_import_fips_zlib_zlib()
 if (ORYOL_OPENGL AND NOT FIPS_RASPBERRYPI)
     fips_import_fips_glfw_glfw3()
 endif()
 fips_import_fips_imgui_imgui()
+fips_import_fips_soloud_soloud()
 fips_import_fips_unittestpp_unittestpp()
 if (FIPS_PROFILING)
     fips_import_fips_remotery_Remotery()
