--- a/src/yakc/CMakeLists.txt
+++ b/src/yakc/CMakeLists.txt
@@ -9,5 +9,5 @@ fips_begin_app(yakc windowed)
     if (YAKC_UI)
         fips_deps(ui)
     endif()
-    fips_deps(Gfx HTTP Input IMUI Synth Assets core roms)
+    fips_deps(Gfx HTTP Input IMUI Assets soloud core roms )
 fips_end_app()
