--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,28 @@
+sudo: true
+git:
+    depth: 3
 language: cpp
 compiler: gcc
 os: 
   - osx
   - linux
-
-before_install:
-  - echo $TRAVIS_OS_NAME
-  # LINUX
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq; fi
+addons:
+    apt:
+        sources:
+            - ubuntu-toolchain-r-test
+            - kalakris-cmake
+        packages:
+            - cmake
+            - gcc-4.8
+            - g++-4.8
+            - libglu1-mesa-dev
+            - xorg-dev
+            - libasound2-dev
 
 install:
   - echo $TRAVIS_OS_NAME
   # LINUX
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install -qq g++-4.8; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install -qq; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install libglu1-mesa-dev; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install xorg-dev; fi
   # OSX
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install cmake; fi
 
