Fixes for Oryol module exodus

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ fips_import_oryol_Gfx()
 fips_import_oryol_IO()
 fips_import_oryol_HTTP()
 fips_import_oryol_Input()
-fips_import_oryol_IMUI()
+fips_import_oryol_imgui_IMUI()
 fips_import_oryol_Resource()
 fips_import_oryol_Assets()
 fips_ide_group("Libs")
