Started with test for new z80 impl

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -2,7 +2,7 @@ fips_begin_module(core)
     fips_vs_warning_level(3)
     fips_files(
         memory.h clock.h common.h _dummy.cc
-        z80int.h z80.h z80pio.h z80ctc.h z80dbg.h
+        z80int.h z80.h z80x.h git push --set-upstream origin z80decodez80pio.h z80ctc.h z80dbg.h
         kc85.h kc85_video.h kc85_audio.h kc85_exp.h kc85_roms.h
         kc85_snapshot.h
     )
