More new CPU decoder stuff

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,7 +1,8 @@
 if (FIPS_UNITTESTS)
 fips_begin_unittest(yakc_test)
     fips_vs_warning_level(3)
-    fips_files(memory_test.cc z80_test.cc z80x_test.cc daisychain_test.cc zexdoc_test.cc)
+#    fips_files(memory_test.cc z80_test.cc z80x_test.cc daisychain_test.cc zexdoc_test.cc)
+fips_files(z80x_test.cc)
     fips_generate(FROM zex.yml TYPE dump)
     fips_deps(core Core)
 fips_end_unittest()
