--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,18 @@ os:
   - osx
   - linux
 addons:
-    apt:
-        sources:
-            - ubuntu-toolchain-r-test
-            - kalakris-cmake
-        packages:
-            - cmake
-            - gcc-4.8
-            - g++-4.8
-            - libglu1-mesa-dev
-            - xorg-dev
-            - libasound2-dev
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - george-edison55-precise-backports # cmake 3.x
+    packages:
+      - cmake
+      - cmake-data
+      - gcc-4.8
+      - g++-4.8
+      - libglu1-mesa-dev
+      - xorg-dev
+      - libasound2-dev
 
 install:
   - echo $TRAVIS_OS_NAME
