New 'algorithmic' Z80 instruction decoder (#18)
* Started with new z80 implementation which decodes ops instead of jump table

* Started with test for new z80 impl

* More new CPU decoder stuff

* Even more new CPU decoder stuff

* More new CPU decoder stuff

* Implemented the IX/IY ops

* z80x: register access cleanup

* Some code cleanup

* LDI, LDD, LDIR, LDDR, CPI, CPD, CPIR, CPDR

* Documented instructions should be complete

* New 'algorithmic' instruction decoder finished and tested

* Some code cleanup

* Fix compile without UI

* Fixed travis.yml for cmake version

* Fixed LD (IX+d),n instructions that failed on GCC

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -6,5 +6,10 @@ fips_begin_module(core)
         kc85.h kc85_video.h kc85_audio.h kc85_exp.h kc85_roms.h
         kc85_snapshot.h
     )
-    fips_generate(FROM opcodes.py HEADER opcodes.h)
+    if (NOT YAKC_Z80_DECODER)
+        fips_files(z80_switch.h)
+        fips_generate(FROM opcodes.py HEADER opcodes.h)
+    else()
+        fips_files(z80_decoder.h)
+    endif()
 fips_end_module()
