New 'algorithmic' code generator finished and tested

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ option(YAKC_UI "Include the debugger UI" ON)
 if (YAKC_UI)
     add_definitions("-DYAKC_UI=1")
 endif()
-option(YAKC_Z80_DECODER "Use the new algorithmic instruction decoder" ON)
+option(YAKC_Z80_DECODER "Use the algorithmic instruction decoder" OFF)
 if (YAKC_Z80_DECODER)
     add_definitions("-DYAKC_Z80_DECODER=1")
 endif()
