Prepare for emulating multiple systems

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ fips_ide_group("")
 fips_include_directories(src)
 fips_add_subdirectory(src/roms)
 fips_add_subdirectory(src/core)
+fips_add_subdirectory(src/kc85)
 fips_add_subdirectory(src/test)
 if (YAKC_UI)
     fips_add_subdirectory(src/ui)
