--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,10 +1,9 @@
 fips_begin_module(core)
     fips_vs_warning_level(3)
     fips_files(
-        memory.h clock.h common.h _dummy.cc
+        memory.h clock.h common.h 
         z80int.h z80.h z80pio.h z80ctc.h z80dbg.h
-        kc85.h kc85_video.h kc85_audio.h kc85_exp.h kc85_roms.h
-        kc85_snapshot.h
+        _dummy.cc
     )
     if (NOT YAKC_Z80_DECODER)
         fips_generate(FROM z80_opcodes.py HEADER z80_opcodes.h)
