--- a/src/yakc/CMakeLists.txt
+++ b/src/yakc/CMakeLists.txt
@@ -10,5 +10,5 @@ fips_begin_app(yakc windowed)
     if (YAKC_UI)
         fips_deps(ui)
     endif()
-    fips_deps(Gfx HTTP Input IMUI Assets soloud core roms )
+    fips_deps(Gfx HTTP Input IMUI Assets soloud core roms kc85)
 fips_end_app()
