--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ fips_add_subdirectory(src/roms)
 fips_add_subdirectory(src/core)
 fips_add_subdirectory(src/kc85)
 fips_add_subdirectory(src/z1013)
+fips_add_subdirectory(src/emu)
 fips_add_subdirectory(src/test)
 if (YAKC_UI)
     fips_add_subdirectory(src/ui)
