Moved Z80 stuff into its own directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,6 @@ option(YAKC_UI "Include the debugger UI" ON)
 if (YAKC_UI)
     add_definitions("-DYAKC_UI=1")
 endif()
-option(YAKC_Z80_DECODER "Use the algorithmic instruction decoder" OFF)
-if (YAKC_Z80_DECODER)
-    add_definitions("-DYAKC_Z80_DECODER=1")
-endif()
 
 set(SOLOUD_LIBMODPLUG OFF CACHE BOOL "Do not use libmodplug")
 
@@ -51,6 +47,7 @@ fips_ide_group("")
 fips_include_directories(src)
 fips_add_subdirectory(src/roms)
 fips_add_subdirectory(src/core)
+fips_add_subdirectory(src/z80)
 fips_add_subdirectory(src/kc85)
 fips_add_subdirectory(src/z1013)
 fips_add_subdirectory(src/emu)
