cmake: moved all yakc source into its own IDE group

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,8 +42,8 @@ fips_import_fips_unittestpp_unittestpp()
 if (FIPS_PROFILING)
     fips_import_fips_remotery_Remotery()
 endif()
-fips_ide_group("")
 
+fips_ide_group("YAKC")
 fips_include_directories(src)
 fips_add_subdirectory(src/roms)
 fips_add_subdirectory(src/core)
