Moved breadboard.h from core to emu

--- a/src/emu/CMakeLists.txt
+++ b/src/emu/CMakeLists.txt
@@ -1,6 +1,6 @@
 fips_begin_module(emu)
     fips_vs_warning_level(3)
     fips_files(
-        emu.h _dummy.cc
+        breadboard.h emu.h _dummy.cc
     )
 fips_end_module()
