Allow yakc to be used as fips import

--- a/src/kc85/CMakeLists.txt
+++ b/src/kc85/CMakeLists.txt
@@ -4,4 +4,5 @@ fips_begin_module(kc85)
         kc85.h kc85_video.h kc85_audio.h kc85_exp.h kc85_roms.h kc85_snapshot.h
         _dummy.cc
     )
+    fips_deps(soloud)
 fips_end_module()
