--- a/src/yakc/CMakeLists.txt
+++ b/src/yakc/CMakeLists.txt
@@ -8,7 +8,7 @@ fips_begin_app(yakc windowed)
     )
     oryol_shader(shaders.shd)
     if (YAKC_UI)
-        fips_deps(ui)
+        fips_deps(ui IMUI)
     endif()
-    fips_deps(Gfx HTTP Input IMUI Assets soloud roms)
+    fips_deps(Gfx HTTP Input Assets soloud roms)
 fips_end_app()
