--- a/fips.yml
+++ b/fips.yml
@@ -11,3 +11,10 @@ imports:
         git: https://github.com/floooh/oryol-imgui.git
     fips-soloud:
         git: https://github.com/floooh/fips-soloud.git
+
+exports:
+    header-dirs:
+        - src
+    modules:
+        yakc: .
+
