cmake shader fix when imported

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ else()
         fips_src(src/z1013)
         fips_src(src/emu)
         fips_src(src/yakc EXCEPT Main.cc)
-        oryol_shader(shaders.shd)
+        oryol_shader(yakc_shaders.shd)
         fips_deps(Gfx HTTP Input Assets soloud)
     fips_end_module()
 endif()
