Add fileloader class into import version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ else()
         fips_src(src/kc85)
         fips_src(src/z1013)
         fips_src(src/emu)
+        fips_files_ex(src/ui FileLoader.*)
         fips_src(src/yakc EXCEPT Main.cc)
         oryol_shader(yakc_shaders.shd)
         fips_deps(Gfx HTTP Input Assets soloud)
