Moved files around

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,28 +44,18 @@ if (NOT FIPS_IMPORT)
 
     fips_ide_group("YAKC")
     fips_include_directories(src)
-    fips_add_subdirectory(src/roms)
-    fips_add_subdirectory(src/core)
-    fips_add_subdirectory(src/z80)
-    fips_add_subdirectory(src/kc85)
-    fips_add_subdirectory(src/z1013)
-    fips_add_subdirectory(src/emu)
+    fips_add_subdirectory(src/yakc)
     fips_add_subdirectory(src/test)
     if (YAKC_UI)
         fips_add_subdirectory(src/ui)
     endif()
-    fips_add_subdirectory(src/yakc)
+    fips_add_subdirectory(src/yakcapp)
 
 else()
     # if imported, just put everything into a single module
     fips_begin_module(yakc)
         fips_ide_group("YAKC")
-        fips_src(src/roms)
-        fips_src(src/core)
-        fips_src(src/z80)
-        fips_src(src/kc85)
-        fips_src(src/z1013)
-        fips_src(src/emu)
+        fips_src(src/yakc)
         fips_files_ex(src/ui FileLoader.*)
         fips_src(src/yakc EXCEPT Main.cc)
         oryol_shader(yakc_shaders.shd)
