More project structure cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,8 +47,9 @@ if (NOT FIPS_IMPORT)
     fips_add_subdirectory(src/yakc)
     fips_add_subdirectory(src/test)
     if (YAKC_UI)
-        fips_add_subdirectory(src/ui)
+        fips_add_subdirectory(src/yakc_ui)
     endif()
+    fips_add_subdirectory(src/yakc_oryol)
     fips_add_subdirectory(src/yakcapp)
 
 else()
