--- a/src/yakc/CMakeLists.txt
+++ b/src/yakc/CMakeLists.txt
@@ -2,7 +2,7 @@ fips_begin_module(yakc)
     fips_vs_warning_level(3)
     fips_files(
         core.h core.cc memory.cc memory.h clock.h clock.cc
-        z80.h z80int.h z80pio.h z80ctc.h z80dbg.h
+        z80.cc z80.h z80int.cc z80int.h z80pio.cc z80pio.h z80ctc.cc z80ctc.h z80dbg.cc z80dbg.h
         kc85.h kc85.cc kc85_video.h kc85_video.cc kc85_audio.h kc85_audio.cc
         kc85_exp.h kc85_exp.cc kc85_roms.h kc85_roms.cc
         kc85_snapshot.h kc85_snapshot.cc
@@ -11,5 +11,5 @@ fips_begin_module(yakc)
         yakc.h yakc.cc
     )
     fips_generate(FROM roms.yml TYPE dump)
-    fips_generate(FROM z80_opcodes.py HEADER z80_opcodes.h)
+    fips_generate(FROM z80_opcodes.py SOURCE z80_opcodes.cc)
 fips_end_module()
