--- a/src/yakcapp/CMakeLists.txt
+++ b/src/yakcapp/CMakeLists.txt
@@ -1,14 +1,9 @@
 fips_begin_app(yakcapp windowed)
     fips_files(
         Main.cc
-        Draw.h Draw.cc
-        Audio.h Audio.cc
-        KC85Oryol.h
-        kc85_audiosource.h kc85_audiosource.cc
     )
-    oryol_shader(yakc_shaders.shd)
     if (YAKC_UI)
-        fips_deps(yakc ui IMUI)
+        fips_deps(yakc_ui)
     endif()
-    fips_deps(Gfx HTTP Input Assets soloud)
+    fips_deps(yakc yakc_oryol)
 fips_end_app()
