More project structure cleanup

--- a/src/yakc_oryol/CMakeLists.txt
+++ b/src/yakc_oryol/CMakeLists.txt
@@ -2,8 +2,12 @@ fips_begin_lib(yakc_oryol)
     fips_files(
         Draw.h Draw.cc
         Audio.h Audio.cc
-        KC85Oryol.h
+        Disasm.h Disasm.cc
+        FileLoader.h FileLoader.cc
+        SnapshotStorage.h SnapshotStorage.cc
+        z80dasm.h z80dasm.cc
         kc85_audiosource.h kc85_audiosource.cc
+
     )
     oryol_shader(yakc_shaders.shd)
     fips_deps(Gfx HTTP Input Assets soloud yakc)
