--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ if (NOT FIPS_IMPORT)
     fips_import_oryol_imgui_IMUI()
     fips_import_oryol_Resource()
     fips_import_oryol_Assets()
-    fips_ide_group("Libs")
+    fips_ide_group("ExtLibs")
     fips_import_fips_zlib_zlib()
     if (ORYOL_OPENGL AND NOT FIPS_RASPBERRYPI)
         fips_import_fips_glfw_glfw3()
