--- a/src/yakc_oryol/CMakeLists.txt
+++ b/src/yakc_oryol/CMakeLists.txt
@@ -2,6 +2,7 @@ fips_begin_lib(yakc_oryol)
     fips_files(
         Draw.h Draw.cc
         Audio.h Audio.cc
+        Keyboard.h Keyboard.cc
         Disasm.h Disasm.cc
         FileLoader.h FileLoader.cc
         SnapshotStorage.h SnapshotStorage.cc
