--- a/src/yakc/roms/roms.yml
+++ b/src/yakc/roms/roms.yml
@@ -6,7 +6,10 @@ files:
     - 'z1013_mon_a2.bin'
     - 'z9001_basic.bin'
     - 'kc87_os_2.bin'
+    - 'z9001_os12_1.bin'
+    - 'z9001_os12_2.bin'
     - 'z1013_font.bin'
     - 'z9001_font.bin'
     - 'kc87_font_2.bin'
+    - 'basic_507_511.rom'
 
