--- a/src/yakc/roms/roms.yml
+++ b/src/yakc/roms/roms.yml
@@ -2,6 +2,8 @@
 files:
     - 'basic_c0.853'
     - 'caos31.853'
+    - 'caos42c.854'
+    - 'caos42e.854'
     - 'z1013_mon202.bin'
     - 'z1013_mon_a2.bin'
     - 'z9001_basic.bin'
