Started with CPC emulation

--- a/src/yakc/CMakeLists.txt
+++ b/src/yakc/CMakeLists.txt
@@ -9,6 +9,7 @@ fips_begin_module(yakc)
         z1013.h z1013.cc
         z9001.h z9001.cc
         zx.h zx.cc
+        cpc.h cpc.cc
         keybuffer.h keybuffer.cc
         breadboard.h
         snapshot.h snapshot.cc
