--- a/src/yakc/roms/roms.yml
+++ b/src/yakc/roms/roms.yml
@@ -17,4 +17,9 @@ files:
     - 'amstrad_zx48k.bin'
     - 'amstrad_zx128k_0.bin'
     - 'amstrad_zx128k_1.bin'
+    - 'cpc464_os.bin'
+    - 'cpc464_basic.bin'
+    - 'cpc6128_os.bin'
+    - 'cpc6128_basic.bin'
+    
 
