--- a/src/yakc/roms/rom_dumps.yml
+++ b/src/yakc/roms/rom_dumps.yml
@@ -1,16 +1,7 @@
 ---
+# embed only ROMs needed to boot into KC85/3 to keep client size small
 files:
     - 'basic_c0.853'
     - 'caos31.853'
-    - 'z1013_mon202.bin'
-    - 'z1013_mon_a2.bin'
-    - 'z9001_basic.bin'
-    - 'kc87_os_2.bin'
-    - 'z9001_os12_1.bin'
-    - 'z9001_os12_2.bin'
-    - 'z1013_font.bin'
-    - 'z9001_font.bin'
-    - 'kc87_font_2.bin'
-    - 'basic_507_511.rom'
     
 
