--- a/src/yakc_ui/CMakeLists.txt
+++ b/src/yakc_ui/CMakeLists.txt
@@ -19,6 +19,7 @@ fips_begin_module(yakc_ui)
         AudioWindow.cc AudioWindow.h
         KC85IOWindow.cc KC85IOWindow.h
         InfoWindow.cc InfoWindow.h
+        AY8910Window.cc AY8910Window.h
     )
     fips_deps(IMUI yakc yakc_oryol soloud)
 fips_end_module()
