Added a MC6845 state debugging window

--- a/src/yakc_ui/CMakeLists.txt
+++ b/src/yakc_ui/CMakeLists.txt
@@ -20,6 +20,7 @@ fips_begin_module(yakc_ui)
         KC85IOWindow.cc KC85IOWindow.h
         InfoWindow.cc InfoWindow.h
         AY8910Window.cc AY8910Window.h
+        MC6845Window.cc MC6845Window.h
     )
     fips_deps(IMUI yakc yakc_oryol soloud)
 fips_end_module()
