Added PAL frame timing emulation, and switch between debug/normal video on CPC

--- a/src/yakc/CMakeLists.txt
+++ b/src/yakc/CMakeLists.txt
@@ -3,6 +3,7 @@ fips_begin_module(yakc)
     fips_files(
         core.h core.cc memory.cc memory.h clock.h clock.cc system_bus.h system_bus.cc
         rom_images.h rom_images.cc
+        crt.h crt.cc
         z80.cc z80.h z80int.cc z80int.h z80pio.cc z80pio.h z80ctc.cc z80ctc.h z80dbg.cc z80dbg.h
         i8255.h i8255.cc
         mc6845.h mc6845.cc
