Started to work on BBC Micro video

--- a/src/yakc/CMakeLists.txt
+++ b/src/yakc/CMakeLists.txt
@@ -40,6 +40,7 @@ fips_begin_module(yakc)
         cpc.h cpc.cc
         cpc_video.h cpc_video.cc
         bbcmicro.h bbcmicro.cc
+        bbcmicro_video.h bbcmicro_video.cc
         keybuffer.h keybuffer.cc
         breadboard.h
         snapshot.h snapshot.cc
