Added an i8255 debug state window

--- a/src/yakc_ui/CMakeLists.txt
+++ b/src/yakc_ui/CMakeLists.txt
@@ -25,6 +25,7 @@ fips_begin_module(yakc_ui)
         AY8910Window.cc AY8910Window.h
         MC6845Window.cc MC6845Window.h
         MC6847Window.cc MC6847Window.h
+        i8255Window.cc i8255Window.h
     )
     fips_deps(IMUI yakc yakc_oryol soloud)
 fips_end_module()
