Added a memory filesystem class for exchanging data between emu and outside world

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,7 @@
 cmake_minimum_required(VERSION 2.8)
 get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
 include("${FIPS_ROOT_DIR}/cmake/fips.cmake")
-fips_setup()
-fips_project(yakc)
+fips_setup(PROJECT yakc)
 
 option(YAKC_UI "Include the debugger UI" ON)
 if (YAKC_UI)
