--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -2,7 +2,7 @@ if (FIPS_UNITTESTS)
 fips_begin_unittest(yakc_test)
     fips_vs_warning_level(3)
     fips_files(
-        memory_test.cc daisychain_test.cc        
+        filesystem_test.cc memory_test.cc daisychain_test.cc        
         mos6502_test.cc
         z80_test.cc z80pio_test.cc
         zex_test.cc nestest_test.cc
