Started with MOS6522 VIA emulation

--- a/src/yakc/CMakeLists.txt
+++ b/src/yakc/CMakeLists.txt
@@ -19,6 +19,7 @@ fips_begin_module(yakc)
         z80ctc.h z80ctc.cc 
         cpudbg.h cpudbg.cc
         mos6502.h mos6502.cc
+        mos6522.h mos6522.cc
         i8255.h i8255.cc
         mc6845.h mc6845.cc
         mc6847.h mc6847.cc
