--- a/fips-configs/yakc-emsc-make-release.yml
+++ b/fips-configs/yakc-emsc-make-release.yml
@@ -7,3 +7,9 @@ cmake-toolchain: emscripten.toolchain.cmake
 defines:
     FIPS_NO_ASSERTS_IN_RELEASE: ON
     FIPS_EMSCRIPTEN_MEM_INIT_METHOD: 0
+    FIPS_EMSCRIPTEN_EXPORTED_FUNCTIONS: [
+        _main,_emsc_pass_data,_emsc_put_msg,
+        _yakc_boot,_yakc_toggle_ui,_yakc_toggle_keyboard,
+        _yakc_toggle_joystick,_yakc_power,_yakc_reset,
+        _yakc_get_system
+    ]
